fixed HTML source: - added missing closing tags - removed <br> tags (don't use it as spacer, because CSS is implemented   in every browser) - still have some align attributes that avoids validation :(

--- a/devfest-site/css/style.css
+++ b/devfest-site/css/style.css
@@ -282,7 +282,7 @@ body>section {
 	margin:4px 0 10px 0;
 }
 
-#gdg-container,#gdg-edit-event {
+#gdg-container, #gdg-edit-event {
 	float: left;
 	border: 1px solid #ddd;
 	padding: 30px 40px 20px 40px;
@@ -297,30 +297,29 @@ body>section {
 	box-shadow: 0px 0 50px #ccc;
 }
 
-#gdg-circle {   
-    width:auto; 
-    height:auto;
-	float: none;
-	align:center;
-	text-align:center;
-	border: 1px solid #ddd;
-	padding: 30px 30px 30px 30px;
-	margin: 0px;
-	background: #fff;
-	-webkit-border-radius: 50%;
-	-moz-border-radius: 50%;
-	border-radius: 50%;
-	-webkit-box-shadow: 0px 0 50px #ccc;
-	-moz-box-shadow: 0px 0 50px #ccc;
-	box-shadow: 0px 0 50px #ccc;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
+.gdg-circle {   
+  background: #fff;
+  border: 1px solid #ddd;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  border-radius: 50%;
+  bottom: 0;
+  -webkit-box-shadow: 0px 0 50px #ccc;
+  -moz-box-shadow: 0px 0 50px #ccc;
+  box-shadow: 0px 0 50px #ccc;
+  float: none;
+  height: auto;
+  left: 0;
+  margin: 0px;
+  padding: 30px 30px 30px 30px;
+  position: absolute;
+  right: 0;
+  text-align: center;
+  top: 0;
+  width: auto;
 }
 
-#dummy {
+.dummy {
     margin-top: 100%;
 }
 
@@ -687,3 +686,12 @@ tr.slot td {
 
 #faqlist li { margin-bottom: 30px; }
 #faqlist h3 { margin-bottom: 10px; }
+
+#page_vhackandroid h1 { float: none; font-size: 25px; margin-bottom: 10px; }
+#sponsor_container { margin-top: 40px; }
+#sponsor_container .fixedratio { margin-bottom: 40px; }
+#page_vhackandroid .sponsorimg { display: block; }
+#page_vhackandroid .vha_small { height: 50%; }
+#sponsors_column h3,
+#sponsors_column h4 { text-align: center; }
+#sponsors_column img { display: block; }
